# Rank-2-Lists-of-Python

Module 00 - Growing Code/ex0/: ft_hello_garden.py
Module 00 - Growing Code/ex5/: ft_water_reminder.py
Module 00 - Growing Code/ex6/: ft_count_harvest_recursive.py
Module 00 - Growing Code/ex7/: ft_seed_inventory.py
Module 01 - Code Cultivation/ex0/: ft_garden_intro.py
Module 01 - Code Cultivation/ex1/: ft_garden_data.py
Module 01 - Code Cultivation/ex2/: ft_plant_growth.py
Module 01 - Code Cultivation/ex3/: ft_plant_factory.py
Module 01 - Code Cultivation/ex4/: ft_garden_security.py
Module 01 - Code Cultivation/ex5/: ft_plant_types.py
Module 02 - Garden Guardian/ex0/: ft_first_exception.py
Module 02 - Garden Guardian/ex1/: ft_raise_exception.py
Module 02 - Garden Guardian/ex2/: ft_different_errors.py
Module 02 - Garden Guardian/ex3/: ft_custom_errors.py
Module 02 - Garden Guardian/ex4/: ft_finally_block.py
Module 03 - Data Quest/ex1/: ft_score_analytics.py
Module 03 - Data Quest/ex2/: ft_coordinate_system.py
Module 03 - Data Quest/ex3/: ft_achievement_tracker.py
Module 03 - Data Quest/ex4/: ft_inventory_system.py
Module 03 - Data Quest/ex5/: ft_data_stream.py
Module 03 - Data Quest/ex6/: ft_data_alchemist.py
Module 04 - Data Archivist/ex0/: ft_ancient_text.py
Module 04 - Data Archivist/ex1/: ft_archive_creation.py
Module 04 - Data Archivist/ex3/: ft_vault_security.py
Module 07 - DataDeck/: battle.py  capacitor.py  tournament.py
Module 08 - The Matrix/ex1/: loading.py  pyproject.toml  requirements.txt
(+10 files in other folders)
